# spayd

./: CHANGELOG.md  Cargo.toml  README.md
src/: convert.rs  crc32.rs  date_conversion.rs  error.rs  fields.rs  iban_bic.rs  lib.rs  parser.rs  spayd.rs
