[package]
name = "spayd"
description = "Text handling for Short Payment Descriptors (SPAYD or SPD)"
homepage = "https://github.com/Korma-Chameleon/spayd"
repository = "https://github.com/Korma-Chameleon/spayd"
license = "Apache-2.0"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
percent-encoding = "2.3.0"
crc32fast = { version = "1.3.2", optional = true }
chrono = { version = "0.4.31", optional = true }
iban_validate = { version = "4.0.1", optional = true }
thiserror = "1.0.48"

[features]
default = ["crc32", "chrono", "iban_validate"]
crc32 = ["dep:crc32fast"]
